--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,20 @@
-environment=
+logging.file.name=application.log
+
+logging.level.root=INFO
+logging.level.org.springframework.web=WARN
+logging.level.org.hibernate=ERROR
+logging.level.com.bridgelabz=DEBUG
+
+# Logging pattern for the console and file
+logging.pattern.console=%d{dd-MM-yyyy HH:mm.ss.SS} [%level] [%thread] [%logger{5}:%line] %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm.ss.SS} [%level] [%thread] [%logger{5}:%line] %msg%n
+
+
+environment=COMMON
+
 #Database setup
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_payroll
+spring.datasource.url=jdbc:mysql://localhost:3306/cfp_employee
 spring.datasource.username=root
 spring.datasource.password=12345678
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
