--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,7 @@
-logging.file.name=application.log
-
-logging.level.root=INFO
-logging.level.org.springframework.web=WARN
-logging.level.org.hibernate=ERROR
-logging.level.com.bridgelabz=DEBUG
-
-# Logging pattern for the console and file
-logging.pattern.console=%d{dd-MM-yyyy HH:mm.ss.SS} [%level] [%thread] [%logger{5}:%line] %msg%n
-logging.pattern.file=%d{yyyy-MM-dd HH:mm.ss.SS} [%level] [%thread] [%logger{5}:%line] %msg%n
-
+spring.profiles.active=prod
 
 environment=COMMON
+
 
 #Database setup
 spring.jpa.hibernate.ddl-auto=update
