--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,2 +1,11 @@
 environment=PROD
+logging.level.root=INFO
+logging.level.org.springframework.web=WARN
+logging.level.org.hibernate=ERROR
+logging.level.com.bridgelabz=DEBUG
+
+# Logging pattern for the console and file
+logging.pattern.console=
+logging.pattern.file=%d{yyyy-MM-dd HH:mm.ss.SS} [%level] [%thread] [%logger{5}:%line] %msg%n
+
 spring.main.banner-mood=off
